--- a/examples/darknet/templates/index.html
+++ b/examples/darknet/templates/index.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
-            <h3 class="mt-5">Yolo Serial Demo</h3>
+            <h3 class="mt-5">YoloV3 Обнаружение человеков Khadas NPU</h3>
             <img src="{{ url_for('video_feed') }}" width="100%">
         </div>
     </div>
